# arberator

./: README.md  example.py  example02.py  pyproject.toml
arber/: folder.py  system.py
arbor/: folder.py  renderer.py  system.py
fictus/: __init__.py  constants.py  display.py  displaymodel.py  fictusdisplay.py  fictusfilesystem.py  folder.py  renderer.py  system.py
