[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arbor"
version = "0.0.1"
authors = [
  { name="Jason Brackman", email="asdf@asdf.ca" },
]
description = "Generate a fake directory structure to be output for the purpose of documentation."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
